feat: 目標設定機能のUIとカロリー計算ロジックを実装

--- a/index_l.html
+++ b/index_l.html
@@ -43,7 +43,7 @@
                 <p id="message"></p>
             </div>
             
-            <a href="#" class="white-button1">目標の設定</a>
+            <a href="index_l_1.html" class="white-button1">目標の設定</a>
             
         </div>
     </div>
