--- a/index_l_1.html
+++ b/index_l_1.html
@@ -61,6 +61,6 @@
         </div>
     </div>
     
-    <script src="script_l_1.html"></script>
+    <script src="script_l_1.js"></script>
 </body>
 </html>
