--- a/index_l_1.html
+++ b/index_l_1.html
@@ -32,8 +32,8 @@
                     <label for="target_weight">目標体重 (kg)</label>
                     <input type="number" id="target_weight" name="target_weight" min="1" max="500" step="0.1" required>
 
-                    <label for="target_date">目標達成日</label>
-                    <input type="date" id="target_date" name="target_date" required>
+                    <label for="target_period_months">目標期間 (ヶ月)</label>
+                 <input type="number" id="target_period_months" name="target_period_months" min="1" max="60" required value="3">
                     
                     <label for="activity_level">活動レベル</label>
                     <select id="activity_level" name="activity_level" required>
