--- a/index_l_1.html
+++ b/index_l_1.html
@@ -33,8 +33,19 @@
                     <input type="number" id="target_weight" name="target_weight" min="1" max="500" step="0.1" required>
 
                     <label for="target_period_months">目標期間 (ヶ月)</label>
-                 <input type="number" id="target_period_months" name="target_period_months" min="1" max="60" required value="3">
+                   <input type="number" id="target_period_months" name="target_period_months" min="1" max="60" required value="3">
                     
+                    <label for="gender">性別</label>
+                    <select id="gender" name="gender" required>
+                        <option value="male">男性</option>
+                        <option value="female">女性</option>
+                    </select>
+
+                    <label for="height">身長 (cm)</label>
+                    <input type="number" id="height" name="height" min="1" max="300" step="1" required>
+
+                    <label for="age">年齢</label>
+                    <input type="number" id="age" name="age" min="1" max="150" required>
                     <label for="activity_level">活動レベル</label>
                     <select id="activity_level" name="activity_level" required>
                         <option value="1.2">ほぼ運動しない</option>
