fix: CSSレスポンシブ対応と画面収まりの修正

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
     </div>
 
- <a href="#" class="white-button1">食事を登録する  </a>
+ <a href="index_1.html" class="white-button1">食事を登録する  </a>
  <a href="#" class="white-button2">次の食事のおすすめメニュー  </a>
 
 
