fix: CSSレスポンシブ対応と画面収まりの修正

--- a/index_1.html
+++ b/index_1.html
@@ -13,7 +13,7 @@
             &lt; 体重記録に戻る
         </a>
 
-        <div class="background-b" style="max-width: 90%; margin: 10px auto;"> 
+        <div class="background-b"> 
 
             <h1>🍽 食事の記録</h1>
 
