fix: CSSレスポンシブ対応と画面収まりの修正

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class = nokori2> xkcal</p>
     </div>
 
- <a href="#" class="white-button">今日の食事の振り返り  </a>
+ <a href="#" class="white-button">食事の振り返り  </a>
 
 <div class="white-box1">
          <p id="greeting-message">メッセージを読み込み中...</p>
