update: rename some files and fix contents

--- a/daily_quest.html
+++ b/daily_quest.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GemFit</title>
-    <link rel="stylesheet" href="style_r.css">
+    <link rel="stylesheet" href="style_daily_quest.css">
     <div class="background-a">
     <div class="background-b">
     <nav class="main-nav">
   <ul>
-    <li><a href="index_l.html">体重入力（目標）</a></li>
+    <li><a href="weight_dashboard.html">体重入力（目標）</a></li>
     <li><a href="index.html">食事記録</a></li>
-    <li><a href="index_r.html">デイリークエスト</a></li>
+    <li><a href="daily_quest.html">デイリークエスト</a></li>
   </ul>
 </nav>
     </div>
      <div class="background-c">
-
+      <h1 style="text-align: center; font-size: 24px; margin-top: 20px;">デイリークエスト</h1>
+      <p>開発中...</p>
+     </div>
 
 
 
@@ -29,8 +31,7 @@
 </head>
 
 <body>
-
-<script src="script_r.js"></script>
+<script src="script_daily_quest.js"></script>
 </body>
 
 </html>
