--- a/meal_record_form.html
+++ b/meal_record_form.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>食事の記録 | ヘルスケアアプリ</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style_meal_record_form.css"> 
 </head>
 <body>
     <div class="background-a"> 
 
-        <a href="index.html" class="back-link">
+        <a href="weight_dashboard.html" class="back-link">
             &lt; 体重記録に戻る
         </a>
 
@@ -17,7 +17,7 @@
 
             <h1>🍽 食事の記録</h1>
 
-            <a href="meal-review.html">
+            <a href="#">
                 <button class="white-button1" style="width: 100%; margin: 0 auto 15px auto;">食事の振り返り（履歴と削除）</button>
             </a>
             
@@ -58,6 +58,6 @@
         </div>
     </div>
 
-    <script src="script_1.js"></script>
+    <script src="script_meal_record_form.js"></script>
 </body>
 </html>
