--- a/goal_setting_form.html
+++ b/goal_setting_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GemFit - 目標設定</title>
-    <link rel="stylesheet" href="style_l.css"> 
+    <link rel="stylesheet" href="style_weight_dashboard.css"> 
 </head>
 
 <body>
@@ -12,9 +12,9 @@
         <div class="background-b">
             <nav class="main-nav">
                 <ul>
-                    <li><a href="index_l.html">体重入力（目標）</a></li>
+                    <li><a href="weight_dashboard.html">体重入力（目標）</a></li>
                     <li><a href="index.html">食事記録</a></li>
-                    <li><a href="index_r.html">デイリークエスト</a></li>
+                    <li><a href="daily_quest.html">デイリークエスト</a></li>
                 </ul>
             </nav>
         </div>
@@ -64,6 +64,6 @@
         </div>
     </div>
     
-    <script src="script_l_1.js"></script>
+    <script src="script_goal_setting_form.js"></script>
 </body>
 </html>
