--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
   <ul>
 
-    <li><a href="index_l.html">体重入力（目標）</a></li>
+    <li><a href="weight_dashboard.html">体重入力（目標）</a></li>
 
-    <li><a href="index.html">食事記録</a></li>
+    <li><a href="meal_record_form.html">食事記録</a></li>
 
-    <li><a href="index_r.html">デイリークエスト</a></li>
+    <li><a href="daily_quest.html">デイリークエスト</a></li>
 
   </ul>
 
