update: daily quest and meal record by gemini

--- a/meal_record_form.html
+++ b/meal_record_form.html
@@ -9,17 +9,20 @@
 <body>
     <div class="background-a"> 
 
-        <a href="weight_dashboard.html" class="back-link">
-            &lt; 体重記録に戻る
+        <a href="index.html" class="back-link">
+            &lt; ホームに戻る
         </a>
 
         <div class="background-b"> 
 
             <h1>🍽 食事の記録</h1>
 
-            <a href="#">
-                <button class="white-button1" style="width: 100%; margin: 0 auto 15px auto;">食事の振り返り（履歴と削除）</button>
-            </a>
+            <section id="meal-history-section">
+                <h3>📜 食事の履歴 (直近5件)</h3>
+                <div id="meal-history-container">
+                    <p style="color: gray;">履歴を読み込み中...</p>
+                </div>
+            </section>
             
             <hr>
 
