--- a/goal_setting_form.html
+++ b/goal_setting_form.html
@@ -12,6 +12,7 @@
         <div class="background-b">
             <nav class="main-nav">
                 <ul>
+                    <li><a href="index.html">ホーム</a></li>
                     <li><a href="weight_dashboard.html">体重入力（目標）</a></li>
                     <li><a href="index.html">食事記録</a></li>
                     <li><a href="daily_quest.html">デイリークエスト</a></li>
