--- a/weight_dashboard.html
+++ b/weight_dashboard.html
@@ -13,6 +13,7 @@
         <div class="background-b">
             <nav class="main-nav">
                 <ul>
+                    <li><a href="index.html">ホーム</a></li>
                     <li><a href="weight_dashboard.html">体重入力（目標）</a></li>
                     <li><a href="meal_record_form.html">食事記録</a></li>
                     <li><a href="daily_quest.html">デイリークエスト</a></li>
